# sysmanager

./: display.py  pyproject.toml  reminders.py  sysman
src/: reminders.py
