[tool.poetry]
name = "sysmanager"
version = "0.1.0"
description = "system manager written for linux that includes reminders auto-run scripts and etc"
authors = ["Anupama Dissanayake <61502343+Anu2001dev@users.noreply.github.com >"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
black = "^20.8b1"
mypy = "^0.812"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
